# Server-Client

./: CMakeLists.txt  client.cpp  client.h  main.cpp  server.cpp  server.h
build_c/: CMakeCache.txt  Makefile  Server_Client  cmake_install.cmake
